# mk

./: .gitignore  .gitmodules  .gn  BUILD.gn  LICENSE  README.md  makefile  mk.code-workspace
.github/workflows/: build-gn-clang.yml
sdk/lib/zbi-format/: BUILD.gn
sdk/lib/zbi-format/include/lib/zbi-format/asm/: zbi.h
src/devices/block/drivers/virtio/: BUILD.gn  block.cc  block.h
src/devices/bus/lib/virtio/: BUILD.gn  device.cc  driver_utils.cc  ring.cc
src/devices/bus/lib/virtio/backends/: pci.cc  pci_modern.cc
src/devices/bus/lib/virtio/include/lib/virtio/: device.h  driver_utils.h  ring.h
src/devices/bus/lib/virtio/include/lib/virtio/backends/: backend.h  pci.h
src/lib/zbitl/: BUILD.gn
zircon/kernel/: BUILD.gn  params.gni
zircon/kernel/arch/x86/: syscall.S
zircon/kernel/arch/x86/hypervisor/: BUILD.gn
zircon/kernel/arch/x86/phys/: BUILD.gn
zircon/kernel/arch/x86/phys/boot-shim/: BUILD.gn
zircon/kernel/arch/x86/user-copy/: BUILD.gn
zircon/kernel/kernel/: BUILD.gn  idle_power_thread.cc
zircon/kernel/lib/abi_type_validator/: BUILD.gn
zircon/kernel/lib/acpi_lite/: BUILD.gn
zircon/kernel/lib/acpi_lite/include/lib/acpi_lite/: structures.h
zircon/kernel/lib/arch/: BUILD.gn
zircon/kernel/lib/arch/include/lib/arch/: zbi.h
zircon/kernel/lib/arch/x86/: BUILD.gn
zircon/kernel/lib/arch/x86/include/lib/arch/internal/: zbi-constants.h
zircon/kernel/lib/heap/cmpctmalloc/: cmpctmalloc.cc
zircon/kernel/lib/heap/cmpctmalloc/include/lib/: cmpctmalloc.h
zircon/kernel/lib/ktrace/: BUILD.gn  ktrace.cc
zircon/kernel/lib/libc/string/arch/x86/: BUILD.gn
zircon/kernel/lib/syscalls/: BUILD.gn  syscalls.cc
zircon/kernel/platform/: BUILD.gn  power.cc
zircon/kernel/platform/pc/: BUILD.gn  dev-init.cc  power.cc
zircon/kernel/tests/: BUILD.gn
zircon/kernel/top/: BUILD.gn  main.cc
zircon/kernel/vm/: BUILD.gn  vm_address_region.cc  vm_aspace.cc
zircon/system/public/zircon/: syscalls.h
zircon/system/ulib/zircon-internal/: BUILD.gn
zircon/system/ulib/zx/: BUILD.gn
zircon/system/ulib/zx/include/lib/zx/: time.h
